--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="hero-img">
-                <img src="./images/header_bg.png" alt="flower">
+                <img src="./header_bg.png" alt="flower">
             </div>
         </div>
     </section>
@@ -59,7 +59,7 @@
         </div>
         <div class="container grid grid-two--cols">
             <div class="about-video">
-                <video src="./video/208720579-young-woman-floral-crown-walks.mp4_1750935136378.mp4 " loop="" autoplay="" muted=""></video>
+                <video src="./208720579-young-woman-floral-crown-walks.mp4_1750935136378.mp4 " loop="" autoplay="" muted=""></video>
                 <h3>Best Flower Seller</h3>
             </div>
             <div class="about-content">
@@ -84,7 +84,7 @@
             <!-- card1 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_1.png" alt="">
+                    <img src="./card_1.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -96,7 +96,7 @@
             <!-- card2 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_2.png" alt="">
+                    <img src="./card_2.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -108,7 +108,7 @@
             <!-- card3 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_3.png" alt="">
+                    <img src="./card_3.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -120,7 +120,7 @@
             <!-- card4 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_4.png" alt="">
+                    <img src="./card_4.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -132,7 +132,7 @@
             <!-- card5 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_5.png" alt="">
+                    <img src="./card_5.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -145,7 +145,7 @@
             <!-- card6 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_6.png" alt="">
+                    <img src="./card_6.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -169,7 +169,7 @@
             <!-- card8 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_8.png" alt="">
+                    <img src="./card_8.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -180,7 +180,7 @@
             </div>
             <!-- card9 --><div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_9.png" alt="">
+                    <img src="./card_9.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -192,7 +192,7 @@
             <!-- card10 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_10.png" alt="">
+                    <img src="./card_10.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -204,7 +204,7 @@
             <!-- card11 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_11.png" alt="">
+                    <img src="./card_11.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -216,7 +216,7 @@
             <!-- card12 -->
             <div class="product-card">
                 <div class="card-img">
-                    <img src="./images/card_12.png" alt="">
+                    <img src="./card_12.png" alt="">
                     <p class="discount">-10%</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="icon" d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path></svg>
                 </div>
@@ -237,7 +237,7 @@
             <!-- cars 1 -->
             <div class="review-card">
                 <div class="review-img">
-                    <img src="./images/review_1.png" alt="">
+                    <img src="./review_1.png" alt="">
                 </div>
                 <div class="review-content">
                     <h2 class="section-common--title">John Deo</h2>
@@ -265,7 +265,7 @@
             <!-- card 2 -->
             <div class="review-card">
                 <div class="review-img">
-                    <img src="./images/review_2.png" alt="">
+                    <img src="./review_2.png" alt="">
                 </div>
                 <div class="review-content">
                     <h2 class="section-common--title">John Deo</h2>
@@ -293,7 +293,7 @@
             <!-- card 3 -->
             <div class="review-card">
                 <div class="review-img">
-                    <img src="./images/review_3.png" alt="">
+                    <img src="./review_3.png" alt="">
                 </div>
                 <div class="review-content">
                     <h2 class="section-common--title">John Deo</h2>
@@ -321,7 +321,7 @@
             <!-- card 4 -->
             <div class="review-card">
                 <div class="review-img">
-                    <img src="./images/review_4.png" alt="">
+                    <img src="./review_4.png" alt="">
                 </div>
                 <div class="review-content">
                     <h2 class="section-common--title">John Deo</h2>
@@ -354,7 +354,7 @@
         </div>
         <div class="container grid grid-two--cols">
             <div class="contact-img">
-                <img src="./images/contact-img.png" alt="contact">
+                <img src="./contact-img.png" alt="contact">
             </div>
             <div class="contact-form">
                 <input type="text" id="text" placeholder="Name">
